# philadelphia

./: .gitignore  .project  CHANGELOG.md  HACKING.md  LICENSE  README.md  UPGRADE-1.0.0.md  UPGRADE-1.2.0.md  UPGRADE-2.0.0.md  UPGRADE-2.1.0.md  checkstyle.xml  pom.xml
.github/: CODEOWNERS  RELEASE_TEMPLATE.md  dependabot.yml
applications/generate/: .gitignore  .project  .pylintrc  README.md  pom.xml  pyproject.toml  requirements.txt  setup.py
applications/generate/etc/: example.ini
applications/generate/philadelphia/: __init__.py  etree.py  generate.py  java.py  model.py  orchestra.py  quickfix.py  repository.py  source.py
documentation/: generate.md  release.md
philadelphia/: pom.xml
philadelphia-acceptor/: README.md  pom.xml
philadelphia-client/: README.md  pom.xml
philadelphia-core/: pom.xml
philadelphia-fix42/: README.md  pom.xml
philadelphia-fix43/: README.md  pom.xml
philadelphia-fix44/: README.md  pom.xml
philadelphia-fix50/: README.md  pom.xml
philadelphia-fix50sp1/: README.md  pom.xml
philadelphia-fix50sp2/: README.md  pom.xml
philadelphia-fixt11/: README.md  pom.xml
philadelphia-initiator/: README.md  pom.xml
philadelphia-perf-test/: README.md  pom.xml
scripts/: archive  archive.txt  build-baseline  build-candidate  config-fix50.ini  config-fix50sp1.ini  fix40.ini  fix41.ini  fix42.ini  fix43.ini  fix44.ini  fix50sp2.ini  fixlatest.ini  fixt11.ini  format-perf-test  generate  generate-fixlatest  generate-license  generate-orchestra  generate-repository  generate.py  license-orchestra.java  license.java
(+355 files in other folders)
