#
# Copyright 2026 Philadelphia authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "philadelphia"
requires-python = ">=3.10"
dynamic = ["version"]

[project.scripts]
philadelphia-generate = "philadelphia.generate:main"

[dependency-groups]
dev = [
    "mypy==2.1.0",
    "ruff==0.15.22",
]

[tool.setuptools.packages.find]
include = ["philadelphia*"]
